PCS BAckup 26Dec2023/Backup-Source/objects/GCP_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Date__c</fullName>
        <label>Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment_Type__c</fullName>
        <label>Comment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Panorama</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GCP_Opportunity_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Opportunity Tracker</label>
        <referenceTo>Phoenix_GCP_Opportunity_Tracker__c</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_SFDC_100pct_Analysis_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP SFDC 100pct Analysis SKU</label>
        <referenceTo>GCP_SFDC_100pct_Analysis_SKU__c</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rx_Compliance_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rx Compliance External</label>
        <referenceTo>Rx_Compliance_External__c</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rx_Compliance_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rx Compliance Summary</label>
        <referenceTo>Rx_Compliance_Summary__c</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Product_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Product Tracker</label>
        <referenceTo>Vision_Customer_Product_Tracker__c</referenceTo>
        <relationshipLabel>GCP Comments</relationshipLabel>
        <relationshipName>GCP_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>long_term_strategy__c</fullName>
        <label>long term strategy</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>short_term_strategy__c</fullName>
        <label>short term strategy</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>GCP Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comment__c</columns>
        <columns>Comment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>equals</operation>
            <value>Albendazole</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Cmnt - {00000}</displayFormat>
        <label>GCP Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>